Security fixes: path traversal, SSRF, hardcoded credentials, dead code cleanup